--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -14,7 +14,7 @@
 
 - name: Deploy Nginx config
   template:
-    src: nginx.conf.j2
+    src: nginx.conf
     dest: /etc/nginx/nginx.conf
   notify: restart nginx
 
